test/bad/lemma_badstep_future.pa
lemma bad_step_id : forall x, x = x + 0 {
    forall x, x + 0 = x by add_zero;
    given x {
        x + 0 = x by all_elim 3;
        x + 0 = x + 0 by eq_intro;
	x = x + 0 by eq_elim 2 3;
    }
    forall x, x = x + 0 by all_intro 5;
}
